# chunkipy

./: .gitignore  .travis.yml  LICENSE  README.md  codecov.yml  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  pages.yml  release.yml  tests.yml
chunkipy/: __init__.py  text_chunker.py  text_chunkizer.py  text_splitter.py  tokens_estimators.py  utils.py
chunkipy/size_estimators/: __init__.py  base_size_estimator.py  char_size_estimator.py  openai_size_estimator.py  word_size_estimator.py
chunkipy/text_chunker/: __init__.py  base_text_chunker.py  data_models.py  text_chunker.py
chunkipy/text_chunker/fixed_size/: fixed_size_text_chunker.py
chunkipy/text_chunker/recursive/: __init__.py  recursive_text_chunker.py
chunkipy/text_splitters/: __init__.py  base_text_splitter.py  basic_text_splitters.py
chunkipy/text_splitters/semantic/: base_semantic_text_splitter.py
docs/source/: api.rst  conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst  usage.rst
docs/source/_templates/: page.html  versions.html
docs/source/size_estimators/: char.rst  index.rst  openai.rst  word.rst
docs/source/text_chunkers/: fixed_size.rst  index.rst  overview.rst  recursive.rst
docs/source/text_splitters/: index.rst  spacy.rst  stanza.rst
examples/: basic_text_splitter.py  custom_size_estimator.py  custom_size_estimator_bert.py  custom_text_splitter.py  overlapping.py  split_using_openai.py  split_using_spacy.py  split_using_stanza.py  split_using_stanza_bengali.py
examples/chunkers/fixed_size/: custom_size_estimator.py  overlapping.py  prebuilt_text_splitter.py
examples/chunkers/recursive/: custom_size_estimator.py  custom_size_estimator_bert.py  (+5 more)
examples/texts/: bengali.txt  napoleon.txt  overlapping.txt
tests/: test_chunkipy.py  test_utils.py
tests/size_estimators/: test_size_estimators.py
tests/text_chunker/: test_text_chunker.py
tests/text_splitters/: test_base_text_splitter.py  test_text_splitters.py
(+9 files in other folders)
